--- a/jpoilvilain.html
+++ b/jpoilvilain.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Mon premier code</title>
 
-<link rel="stylesheet" type="text/css" href="../mystyle.css" />
+<link rel="stylesheet" type="text/css" href="eve/mystyle.css" />
 </head>
 
 <body>
