--- a/Lopes/llopes.html
+++ b/Lopes/llopes.html
@@ -22,6 +22,11 @@
   <rect onclick="alert('Salutos!')" x="400" y="100" width="400" height="200"
         fill="yellow" stroke="navy" stroke-width="10"  />
 </svg>
+<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="595.28px" height="841.89px" viewBox="0 0 595.28 841.89" enable-background="new 0 0 595.28 841.89" xml:space="preserve">
+<polygon fill="#F29400" stroke="#F29400" points="231.755,170.959 176.325,165.823 140.669,208.573 128.425,154.268 76.75,133.568 
+	124.612,105.143 128.331,49.6 170.155,86.336 224.129,72.708 202.115,123.838 "/>
+</svg>
 <h2>2eme exercice</h2>
 </body>
 </html>
