--- a/ADELGADO.html
+++ b/ADELGADO.html
@@ -4,24 +4,159 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Mon premier code</title>
 
-<link rel="stylesheet" type="text/css" href="../../Users/DIMI_M1/Desktop/mystyle.css" />
+<link rel="stylesheet" type="text/css" href="../../../Users/DIMI_M1/Desktop/mystyle.css" />
 </head>
 
 <body>
 <h1>Mon super cours</h1>
 <h2>1er exercice</h2>
 <h3>ajouter du SVG</h3>
-<svg width="12cm" height="4cm" viewBox="0 0 1200 400"
-     xmlns="http://www.w3.org/2000/svg" version="1.1">
-  <desc>Example rect01 - rectangle with sharp corners</desc>
-
-  <!-- Show outline of canvas using 'rect' element -->
-  <rect x="1" y="1" width="1198" height="398"
-        fill="none" stroke="blue" stroke-width="2"/>
-
-  <rect onclick="alert('Salutos!')" x="400" y="100" width="400" height="200"
-        fill="yellow" stroke="navy" stroke-width="10"  />
+<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="800px" height="600px" viewBox="0 0 800 600" enable-background="new 0 0 800 600" xml:space="preserve">
+<g>
+	
+		<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="43.564" y1="99.481" x2="136.283" y2="192.2007" gradientTransform="matrix(0.811 -0.585 0.585 0.811 -48.1346 89.7125)">
+		<stop  offset="0" style="stop-color:#FFFFFF"/>
+		<stop  offset="1" style="stop-color:#000000"/>
+	</linearGradient>
+	<path fill="url(#SVGID_1_)" d="M96.602,218.661c-3.686,0-7.881-2.514-8.945-8.129l-6.113-32.253
+		c-0.137-0.511-0.986-1.581-1.483-1.844L50.058,163.2c-3.674-1.621-5.959-4.699-6.111-8.234s1.859-6.799,5.38-8.73l28.786-15.78
+		c0.443-0.288,1.198-1.427,1.295-1.98l3.315-32.626c0.622-6.115,5.083-8.899,8.965-8.899c1.731,0,4.341,0.514,6.943,2.963
+		l23.903,22.5c0.293,0.237,1.318,0.626,2.141,0.626c0.096,0,0.143-0.006,0.143-0.006l32.053-6.929
+		c0.859-0.186,1.709-0.28,2.529-0.28c3.298,0,6.135,1.492,7.784,4.093c1.721,2.715,1.812,6.171,0.249,9.482l-14.012,29.686
+		c-0.189,0.494-0.131,1.858,0.116,2.363l16.496,28.344c1.924,3.307,2.066,6.876,0.389,9.792c-1.607,2.795-4.671,4.464-8.194,4.464
+		c-0.513,0-1.043-0.034-1.575-0.102l-32.564-4.153c-0.675,0.003-1.842,0.482-2.211,0.841l-21.861,24.446
+		C101.951,217.389,99.318,218.661,96.602,218.661L96.602,218.661z"/>
+	<g>
+		<defs>
+			<filter id="Adobe_OpacityMaskFilter" filterUnits="userSpaceOnUse" x="50.938" y="93.95" width="113.642" height="117.71">
+				<feFlood  style="flood-color:white;flood-opacity:1" result="back"/>
+				<feBlend  in="SourceGraphic" in2="back" mode="normal"/>
+			</filter>
+		</defs>
+		<mask maskUnits="userSpaceOnUse" x="50.938" y="93.95" width="113.642" height="117.71" id="SVGID_2_">
+			<g filter="url(#Adobe_OpacityMaskFilter)">
+				<image overflow="visible" width="119" height="123" xlink:href="FE993BDA.jpg"  transform="matrix(1 0 0 1 48 91)">
+				</image>
+			</g>
+		</mask>
+		
+			<linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="129.4561" y1="185.376" x2="23.8093" y2="79.7302" gradientTransform="matrix(0.811 -0.585 0.585 0.811 -48.1346 89.7125)">
+			<stop  offset="0" style="stop-color:#FFFFFF"/>
+			<stop  offset="1" style="stop-color:#000000"/>
+		</linearGradient>
+		<path mask="url(#SVGID_2_)" fill="url(#SVGID_3_)" d="M98.798,210.414c-1.833,2.05-3.752,1.517-4.264-1.186l-6.113-32.253
+			c-0.512-2.702-2.99-5.821-5.506-6.931l-30.033-13.249c-2.516-1.11-2.602-3.1-0.19-4.422l28.785-15.779
+			c2.411-1.322,4.612-4.642,4.89-7.378l3.32-32.659c0.278-2.736,2.144-3.432,4.146-1.547l23.903,22.5
+			c2.002,1.885,5.84,2.952,8.528,2.371l32.085-6.936c2.688-0.581,3.927,0.979,2.753,3.465l-14.012,29.686
+			c-1.174,2.487-1.002,6.466,0.38,8.843l16.512,28.373c1.383,2.376,0.283,4.037-2.445,3.689l-32.563-4.153
+			c-2.728-0.348-6.46,1.045-8.293,3.095L98.798,210.414z"/>
+	</g>
+	<path fill="#FF7BAC" d="M96.602,218.661c-3.686,0-7.881-2.514-8.945-8.129l-6.113-32.253c-0.137-0.511-0.986-1.581-1.483-1.844
+		L50.058,163.2c-3.674-1.621-5.959-4.699-6.111-8.234s1.859-6.799,5.38-8.73l28.786-15.78c0.443-0.288,1.198-1.427,1.295-1.98
+		l3.315-32.626c0.622-6.115,5.083-8.899,8.965-8.899c1.731,0,4.341,0.514,6.943,2.963l23.903,22.5
+		c0.293,0.237,1.318,0.626,2.141,0.626c0.096,0,0.143-0.006,0.143-0.006l32.053-6.929c0.859-0.186,1.709-0.28,2.529-0.28
+		c3.298,0,6.135,1.492,7.784,4.093c1.721,2.715,1.812,6.171,0.249,9.482l-14.012,29.686c-0.189,0.494-0.131,1.858,0.116,2.363
+		l16.496,28.344c1.924,3.307,2.066,6.876,0.389,9.792c-1.607,2.795-4.671,4.464-8.194,4.464c-0.513,0-1.043-0.034-1.575-0.102
+		l-32.564-4.153c-0.675,0.003-1.842,0.482-2.211,0.841l-21.861,24.446C101.951,217.389,99.318,218.661,96.602,218.661
+		L96.602,218.661z"/>
+</g>
+<g>
+	<linearGradient id="SVGID_4_" gradientUnits="userSpaceOnUse" x1="167.7729" y1="36.8267" x2="292.3034" y2="161.358">
+		<stop  offset="0" style="stop-color:#FFFFFF"/>
+		<stop  offset="1" style="stop-color:#000000"/>
+	</linearGradient>
+	<path fill="url(#SVGID_4_)" d="M263.872,186.225c-1.77,0-4.428-0.535-7.043-3.085l-34.931-34.047
+		c-0.303-0.254-1.366-0.664-2.162-0.664c-0.038,0-0.074,0-0.109,0.004l-47.818,9.467c-0.794,0.157-1.583,0.237-2.343,0.237
+		c-3.352,0-6.217-1.519-7.863-4.166c-1.713-2.756-1.758-6.236-0.123-9.549l21.586-43.741c0.199-0.491,0.164-1.856-0.075-2.365
+		l-23.78-42.551c-1.85-3.312-1.943-6.859-0.257-9.734c1.612-2.747,4.642-4.386,8.106-4.386c0.578,0,1.176,0.044,1.777,0.132
+		l48.27,7.013c0.746-0.003,1.896-0.494,2.226-0.802l33.121-35.766c2.062-2.227,4.663-3.453,7.324-3.453
+		c3.75,0,7.972,2.562,8.954,8.286l8.247,48.075c0.128,0.514,0.958,1.597,1.45,1.869l44.25,20.447
+		c3.645,1.685,5.876,4.802,5.966,8.339c0.091,3.538-1.978,6.766-5.532,8.635l-43.174,22.7c-0.449,0.281-1.223,1.405-1.33,1.957
+		l-5.772,48.402C272.122,183.488,267.688,186.225,263.872,186.225L263.872,186.225z"/>
+	<g>
+		<defs>
+			<filter id="Adobe_OpacityMaskFilter_1_" filterUnits="userSpaceOnUse" x="164.756" y="15.771" width="156.893" height="163.454">
+				<feFlood  style="flood-color:white;flood-opacity:1" result="back"/>
+				<feBlend  in="SourceGraphic" in2="back" mode="normal"/>
+			</filter>
+		</defs>
+		<mask maskUnits="userSpaceOnUse" x="164.756" y="15.771" width="156.893" height="163.454" id="SVGID_5_">
+			<g filter="url(#Adobe_OpacityMaskFilter_1_)">
+				<image overflow="visible" width="162" height="168" xlink:href="FE993BDE.jpg"  transform="matrix(1 0 0 1 162.6328 13.2354)">
+				</image>
+			</g>
+		</mask>
+		<linearGradient id="SVGID_6_" gradientUnits="userSpaceOnUse" x1="284.7715" y1="153.8228" x2="138.524" y2="7.5768">
+			<stop  offset="0" style="stop-color:#FFFFFF"/>
+			<stop  offset="1" style="stop-color:#000000"/>
+		</linearGradient>
+		<path mask="url(#SVGID_5_)" fill="url(#SVGID_6_)" d="M265.887,176.652c-0.326,2.73-2.204,3.395-4.173,1.475l-34.93-34.047
+			c-1.969-1.919-5.788-3.053-8.485-2.519l-47.85,9.473c-2.698,0.534-3.909-1.046-2.692-3.513l21.586-43.741
+			c1.217-2.466,1.115-6.448-0.226-8.849l-23.796-42.58c-1.341-2.401-0.212-4.042,2.509-3.646l48.271,7.013
+			c2.722,0.395,6.477-0.932,8.346-2.95l33.143-35.789c1.869-2.018,3.778-1.451,4.243,1.26l8.247,48.075
+			c0.465,2.71,2.888,5.872,5.384,7.025l44.279,20.462c2.496,1.153,2.547,3.144,0.113,4.424l-43.174,22.7
+			c-2.434,1.28-4.692,4.561-5.018,7.292L265.887,176.652z"/>
+	</g>
+	<path fill="#FF7BAC" d="M263.872,186.225c-1.77,0-4.428-0.535-7.043-3.085l-34.931-34.047c-0.303-0.254-1.366-0.664-2.162-0.664
+		c-0.038,0-0.074,0-0.109,0.004l-47.818,9.467c-0.794,0.157-1.583,0.237-2.343,0.237c-3.352,0-6.217-1.519-7.863-4.166
+		c-1.713-2.756-1.758-6.236-0.123-9.549l21.586-43.741c0.199-0.491,0.164-1.856-0.075-2.365l-23.78-42.551
+		c-1.85-3.312-1.943-6.859-0.257-9.734c1.612-2.747,4.642-4.386,8.106-4.386c0.578,0,1.176,0.044,1.777,0.132l48.27,7.013
+		c0.746-0.003,1.896-0.494,2.226-0.802l33.121-35.766c2.062-2.227,4.663-3.453,7.324-3.453c3.75,0,7.972,2.562,8.954,8.286
+		l8.247,48.075c0.128,0.514,0.958,1.597,1.45,1.869l44.25,20.447c3.645,1.685,5.876,4.802,5.966,8.339
+		c0.091,3.538-1.978,6.766-5.532,8.635l-43.174,22.7c-0.449,0.281-1.223,1.405-1.33,1.957l-5.772,48.402
+		C272.122,183.488,267.688,186.225,263.872,186.225L263.872,186.225z"/>
+</g>
+<g>
+	
+		<linearGradient id="SVGID_7_" gradientUnits="userSpaceOnUse" x1="257.5366" y1="12.2002" x2="326.1382" y2="80.8022" gradientTransform="matrix(0.3935 0.7868 -0.7684 0.3847 127.5954 -51.6934)">
+		<stop  offset="0" style="stop-color:#FFFFFF"/>
+		<stop  offset="1" style="stop-color:#000000"/>
+	</linearGradient>
+	<path fill="url(#SVGID_7_)" d="M209.777,241.018c-3.099,0-6.016-1.683-8.001-4.616l-9.422-13.92
+		c-0.335-0.427-1.561-1.088-2.132-1.135l-16.292-0.223c-3.988-0.055-7.292-1.98-8.838-5.148c-1.546-3.168-1.031-6.956,1.378-10.133
+		l9.866-13.006c0.296-0.454,0.529-1.827,0.39-2.383l-5.167-15.964c-1.441-4.45,0.076-7.496,1.109-8.916
+		c1.646-2.264,4.268-3.563,7.19-3.563c1.286,0,2.614,0.251,3.946,0.746l15.482,5.754c-0.001,0-0.001,0,0,0
+		c0.01,0,0.185,0.038,0.506,0.039c0.797,0,1.509-0.233,1.713-0.357l13.094-9.505c1.919-1.393,4.041-2.129,6.136-2.129
+		c2.367,0,4.574,0.922,6.215,2.597c1.275,1.302,2.78,3.643,2.703,7.402l-0.34,16.685c0.025,0.572,0.662,1.876,1.117,2.263
+		l13.343,9.981c3.209,2.401,4.745,5.911,4.108,9.388s-3.316,6.214-7.168,7.322l-15.585,4.486c-0.472,0.18-1.386,1.069-1.591,1.573
+		l-4.978,15.713C216.911,239.165,212.942,241.017,209.777,241.018L209.777,241.018z"/>
+	<g>
+		<defs>
+			<filter id="Adobe_OpacityMaskFilter_2_" filterUnits="userSpaceOnUse" x="171.21" y="163.556" width="69.811" height="70.462">
+				<feFlood  style="flood-color:white;flood-opacity:1" result="back"/>
+				<feBlend  in="SourceGraphic" in2="back" mode="normal"/>
+			</filter>
+		</defs>
+		<mask maskUnits="userSpaceOnUse" x="171.21" y="163.556" width="69.811" height="70.462" id="SVGID_8_">
+			<g filter="url(#Adobe_OpacityMaskFilter_2_)">
+				<image overflow="visible" width="75" height="75" xlink:href="FE993BD9.jpg"  transform="matrix(1 0 0 1 168.8198 161.2017)">
+				</image>
+			</g>
+		</mask>
+		
+			<linearGradient id="SVGID_9_" gradientUnits="userSpaceOnUse" x1="319.1553" y1="73.8179" x2="246.1615" y2="0.8248" gradientTransform="matrix(0.3935 0.7868 -0.7684 0.3847 127.5954 -51.6934)">
+			<stop  offset="0" style="stop-color:#FFFFFF"/>
+			<stop  offset="1" style="stop-color:#000000"/>
+		</linearGradient>
+		<path mask="url(#SVGID_8_)" fill="url(#SVGID_9_)" d="M218.71,164.35c2.226-1.615,4-0.688,3.944,2.062l-0.34,16.685
+			c-0.056,2.75,1.7,6.347,3.901,7.994l13.363,9.998c2.202,1.647,1.841,3.618-0.802,4.378l-15.586,4.486
+			c-2.643,0.761-5.485,3.528-6.315,6.149l-4.991,15.75c-0.831,2.622-2.771,2.903-4.313,0.626l-9.422-13.92
+			c-1.542-2.277-5.053-4.171-7.802-4.209l-16.322-0.225c-2.75-0.038-3.64-1.861-1.978-4.052l9.866-13.006
+			c1.662-2.191,2.329-6.125,1.481-8.741l-5.176-15.992c-0.847-2.616,0.569-3.973,3.147-3.015l15.485,5.755
+			c2.578,0.958,6.508,0.42,8.733-1.195L218.71,164.35z"/>
+	</g>
+	<path fill="#FF7BAC" d="M209.777,241.018c-3.099,0-6.016-1.683-8.001-4.616l-9.422-13.92c-0.335-0.427-1.561-1.088-2.132-1.135
+		l-16.292-0.223c-3.988-0.055-7.292-1.98-8.838-5.148c-1.546-3.168-1.031-6.956,1.378-10.133l9.866-13.006
+		c0.296-0.454,0.529-1.827,0.39-2.383l-5.167-15.964c-1.441-4.45,0.076-7.496,1.109-8.916c1.646-2.264,4.268-3.563,7.19-3.563
+		c1.286,0,2.614,0.251,3.946,0.746l15.482,5.754c-0.001,0-0.001,0,0,0c0.01,0,0.185,0.038,0.506,0.039
+		c0.797,0,1.509-0.233,1.713-0.357l13.094-9.505c1.919-1.393,4.041-2.129,6.136-2.129c2.367,0,4.574,0.922,6.215,2.597
+		c1.275,1.302,2.78,3.643,2.703,7.402l-0.34,16.685c0.025,0.572,0.662,1.876,1.117,2.263l13.343,9.981
+		c3.209,2.401,4.745,5.911,4.108,9.388s-3.316,6.214-7.168,7.322l-15.585,4.486c-0.472,0.18-1.386,1.069-1.591,1.573l-4.978,15.713
+		C216.911,239.165,212.942,241.017,209.777,241.018L209.777,241.018z"/>
+</g>
 </svg>
+
 <h2>2eme exercice</h2>
 </body>
 </html>
