--- a/pkraimps .html
+++ b/pkraimps .html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>Le super cours de Pauline</h1>
-<h2>1er exercice</h2>
+<h2>2ème exercice</h2>
 <h3>ajouter du SVG</h3>
 <svg version="1.1" id="Calque_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="595.28px" height="841.89px" viewBox="0 0 595.28 841.89" enable-background="new 0 0 595.28 841.89" xml:space="preserve">
@@ -3022,6 +3022,6 @@
 		380.865,308.174 416.248,357.6 477.71,356.686 440.844,405.363 	"/>
 </g>
 </svg>
-<h2>2eme exercice</h2>
+<h2>3eme exercice</h2>
 </body>
 </html>
