--- a/florianbenoist.html
+++ b/florianbenoist.html
@@ -10,7 +10,7 @@
 	<h3>Le SVG style !</h3>
 <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="800px" height="600px" viewBox="0 0 800 600" enable-background="new 0 0 800 600" xml:space="preserve">
-<polygon points="371.842,200.753 389.542,236.617 429.119,242.368 400.48,270.284 407.241,309.702 371.842,291.091 336.442,309.702 
+<polygon onclick="alert('ALERTE !')" points="371.842,200.753 389.542,236.617 429.119,242.368 400.48,270.284 407.241,309.702 371.842,291.091 336.442,309.702 
 	343.203,270.284 314.564,242.368 354.142,236.617 "/>
 </svg>
 
