--- a/sszoniecky.html
+++ b/sszoniecky.html
@@ -5,6 +5,13 @@
 <title>Mon premier code super chouette</title>
 
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
+<script>
+	function changeCouleur(){
+		var fond = document.getElementById('fond');
+		fond.setAttribute("fill","red");
+	}
+</script>
+
 </head>
 
 <body>
@@ -13,11 +20,11 @@
 <h3>ajouter du SVG</h3>
 <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="800px" height="600px" viewBox="0 0 800 600" enable-background="new 0 0 800 600" xml:space="preserve">
-<rect x="17.885" y="24.288" fill="#40A62B" width="774.82" height="569.785"/>
-<text transform="matrix(1 0 0 1 171.1221 117.813)" font-family="'MyriadPro-Regular'" font-size="12">voilÃ  un beau SVG</text>
+<rect onclick="alert('toto il l\'est beau')" id="fond"  x="17.885" y="24.288" fill="#40A62B" width="774.82" height="569.785"/>
+<text transform="matrix(1 0 0 1 171.1221 117.813)" font-family="'MyriadPro-Regular'" font-size="12">voilà  un beau SVG</text>
 <image overflow="visible" width="1024" height="768" xlink:href="img/Desert.jpg"  transform="matrix(0.4025 0 0 0.3509 88.3887 153.7842)">
 </image>
-<polygon points="686.23,306.004 602.867,313.049 561.412,385.716 528.951,308.61 447.031,291.639 510.331,236.939 501.157,153.784 
+<polygon id="etoile" onclick="changeCouleur()" points="686.23,306.004 602.867,313.049 561.412,385.716 528.951,308.61 447.031,291.639 510.331,236.939 501.157,153.784 
 	572.74,197.083 648.991,162.662 629.932,244.122 "/>
 </svg>
 <h2>2eme exercice</h2>
