--- a/jpoilvilain.html
+++ b/jpoilvilain.html
@@ -5,20 +5,30 @@
 <title>Mon premier code</title>
 
 <link rel="stylesheet" type="text/css" href="eve/mystyle.css" />
+
+<script>
+	function changeCouleur() {
+		var rect2 = document.getElementById('rect2');
+		fond.setAttribute("fill","blue");
+	
+	}
+</script>
+
 </head>
 
 <body>
 <h1>Mon super cours</h1>
 <h2>1er exercice</h2>
 <h3>ajouter du SVG</h3>
+
 <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="600px" height="400px" viewBox="0 0 600 400" enable-background="new 0 0 600 400" xml:space="preserve">
-<rect x="113" y="173" fill="#E5352D" stroke="#000000" width="374" height="156"/>
-<circle fill="#FFDD00" stroke="#000000" cx="300" cy="152" r="106.5"/>
-<text transform="matrix(1 0 0 1 244 173)" font-family="'MyriadPro-Regular'" font-size="72">SVG</text>
+<rect onclick="alert('toto')" id="rect1" x="113" y="173" fill="#E5352D" stroke="#000000" width="374" height="14"/>
+<rect onclick="changecouleur()" id="rect2" x="113" y="193" fill="#E5352D" stroke="#000000" width="374" height="14"/>
+<rect x="113" y="214" fill="#E5352D" stroke="#000000" width="374" height="14"/>
+<rect x="113" y="234" fill="#E5352D" stroke="#000000" width="374" height="14"/>
 </svg>
-     
-  <desc>Example rect01 - rectangle with sharp corners</desc>
+
 
   <!-- Show outline of canvas using 'rect' element -->
   <rect x="1" y="1" width="1198" height="398"
