--- a/PCourtois/pcourtois.html
+++ b/PCourtois/pcourtois.html
@@ -5,27 +5,38 @@
 <title>Mon premier code</title>
 
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
+<script>
+	function changeCouleur() {
+		var etoile = document.getElementById('etoile');
+		etoile.setAttribute("fill","#bf326b");
+	}
+	function couleurChange() {
+		var petite = document.getElementById('petite');
+		petite.setAttribute("fill","#921849");
+	}
+</script>
 </head>
 
 <body>
 <h1>Le super cours de Pauline</h1>
-<h2>1er exercice</h2>
+<h2>1ère partie</h2>
 <h3>Le SVG pour les Nuls</h3>
+
 <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="595.28px" height="841.89px" viewBox="0 0 595.28 841.89" enable-background="new 0 0 595.28 841.89" xml:space="preserve">
-<polygon fill="#E36095" stroke="#FFFFFF" points="204.204,259.921 160.122,228.782 109.479,247.443 125.472,195.896 92.074,153.498 
+<polygon onclick="alert('You make me feel like a star !')" id="fond" fill="#E36095" stroke="#FFFFFF" points="204.204,259.921 160.122,228.782 109.479,247.443 125.472,195.896 92.074,153.498 
 	146.041,152.779 176.043,107.915 193.404,159.018 245.343,173.688 202.106,205.991 "/>
-<polygon fill="#E36095" stroke="#FFFFFF" points="242.698,158.749 225.784,145.913 205.622,152.569 212.603,132.517 
+<polygon onclick="changeCouleur()" fill="#E36095" stroke="#FFFFFF" points="242.698,158.749 225.784,145.913 205.622,152.569 212.603,132.517 
 	200.042,115.397 221.27,115.84 233.669,98.604 239.808,118.93 260.033,125.396 242.598,137.516 "/>
-<polygon fill="#E36095" stroke="#FFFFFF" points="277.308,92.247 260.825,93.581 252.58,107.915 246.218,92.651 230.037,89.239 
+<polygon id="etoile" fill="#E36095" stroke="#FFFFFF" points="277.308,92.247 260.825,93.581 252.58,107.915 246.218,92.651 230.037,89.239 
 	242.588,78.472 240.833,62.029 254.952,70.638 270.048,63.888 266.223,79.976 "/>
-<polygon fill="#E36095" stroke="#FFFFFF" points="304.326,81.939 293.212,73.36 279.843,77.652 284.567,64.43 276.354,53.042 
+<polygon onclick="couleurChange()" fill="#E36095" stroke="#FFFFFF" points="304.326,81.939 293.212,73.36 279.843,77.652 284.567,64.43 276.354,53.042 
 	290.389,53.45 298.681,42.119 302.631,55.593 315.97,59.978 304.375,67.898 "/>
-<polygon fill="#E36095" stroke="#FFFFFF" points="330.277,40.787 317.944,38.739 309.266,47.738 307.401,35.376 296.161,29.903 
+<polygon id="petite" fill="#E36095" stroke="#FFFFFF" points="330.277,40.787 317.944,38.739 309.266,47.738 307.401,35.376 296.161,29.903 
 	307.343,24.311 309.074,11.929 317.849,20.834 330.159,18.655 324.401,29.752 "/>
 <line fill="none" stroke="#FFFFFF" x1="0" y1="321.979" x2="595.28" y2="321.979"/>
-<rect y="279.123" fill="#E36095" stroke="#FFFFFF" width="595.28" height="8.163"/>
 </svg>
+
 <h2>2eme exercice</h2>
 </body>
 </html>
