--- a/jpoilvilain.html
+++ b/jpoilvilain.html
@@ -7,10 +7,9 @@
 <link rel="stylesheet" type="text/css" href="eve/mystyle.css" />
 
 <script>
-	function changeCouleur() {
-		var rect2 = document.getElementById('rect2');
+	function changeCouleur(){
+		var fond = document.getElementById('fond');
 		fond.setAttribute("fill","blue");
-	
 	}
 </script>
 
@@ -23,7 +22,7 @@
 
 <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="600px" height="400px" viewBox="0 0 600 400" enable-background="new 0 0 600 400" xml:space="preserve">
-<rect onclick="alert('toto')" id="rect1" x="113" y="173" fill="#E5352D" stroke="#000000" width="374" height="14"/>
+<rect onclick="alert('toto')" id="fond" x="113" y="173" fill="#E5352D" stroke="#000000" width="374" height="14"/>
 <rect onclick="changecouleur()" id="rect2" x="113" y="193" fill="#E5352D" stroke="#000000" width="374" height="14"/>
 <rect x="113" y="214" fill="#E5352D" stroke="#000000" width="374" height="14"/>
 <rect x="113" y="234" fill="#E5352D" stroke="#000000" width="374" height="14"/>
