--- a/pfabre.html
+++ b/pfabre.html
@@ -5,6 +5,14 @@
 <title>Mon premier code</title>
 
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
+
+<script>
+	function changeCouleur(){
+		var fond = document.getElementById('fond2');
+		fond.setAttribute("fill","red");
+	}
+</script>
+
 </head>
 
 <body>
@@ -23,5 +31,15 @@
         fill="yellow" stroke="navy" stroke-width="10"  />
 </svg>
 <h2>2eme exercice</h2>
+
+<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 595.3 841.9" enable-background="new 0 0 595.3 841.9" xml:space="preserve">
+	 <!--<polygon onclick="alert('toto')" id="fond" fill="#07642E" stroke="#000000" stroke-miterlimit="10" points="344,237 264.2,219.4 204.4,275.1 196.6,193.8 125.1,154.1 
+	200,121.5 215.6,41.3 269.8,102.5 350.9,92.5 309.5,162.9 "/>-->
+	
+	<polygon onclick="changeCouleur()" id="fond2" fill="#07642E" stroke="#000000" stroke-miterlimit="10" points="344,237 264.2,219.4 204.4,275.1 196.6,193.8 125.1,154.1 
+	200,121.5 215.6,41.3 269.8,102.5 350.9,92.5 309.5,162.9 "/>
+</svg>
+
 </body>
 </html>
