--- a/Lopes/llopes.html
+++ b/Lopes/llopes.html
@@ -6,11 +6,15 @@
 
 <link rel="stylesheet" type="text/css" href="../mystyle.css" />
 <script>
+
+	var colorPev
+	var colorChange="red";
 	function changeCouleur(){
 		var fond=document.getElementById('fond');
-		fond.setAttribute("fill","red");
-		}
-
+		colorPrev = fond.setAttribute("fill");
+		fond.setAttribute("fill",colorChange);
+		colorChange=colorPrev;
+	}
 </script>
 
 </head>
