--- a/S.G.htm
+++ b/S.G.htm
@@ -5,6 +5,13 @@
 <title>Mon premier code super chouette</title>
 
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
+<script>
+		function changeCouleur(){
+			var fond = document.getElementById('fond');
+			fond.setAttribute("fill","yellow")
+		}
+</script>
+
 </head>
 
 <body>
@@ -23,7 +30,10 @@
 			v3.063c-0.688,7.323-5.19,10.405-8.085,10.688C16.124,23.446,15.378,23.485,14.696,23.485L14.696,23.485z"/>
 	</g>
 </symbol>
-<use xlink:href="#Favoris"  width="63.999" height="60.971" x="-32" y="-30.485" transform="matrix(3.274 0 0 -3.274 446.4688 228.2637)" overflow="visible"/>
+<use  onclick="changeCouleur()" id="fond"  xlink:href="#Favoris"  width="63.999" height="60.971" x="-32" y="-30.485" transform="matrix(3.274 0 0 -3.274 446.4688 228.2637)" overflow="visible"/>
+
+<use  onclick="alert('ALERTE !')" xlink:href="#Favoris"  width="103" height="100" x="-32" y="-30.485" transform="matrix(3.274 0 0 -3.274 446.4688 228.2637)" overflow="visible"/>
+
 </svg>
 <h2>2eme exercice</h2>
 </body>
