--- a/PCourtois/pcourtois.html
+++ b/PCourtois/pcourtois.html
@@ -13,8 +13,10 @@
 		moyen.setAttribute("fill","#921849");
 		var petite = document.getElementById('petite');
 		petite.setAttribute("fill","#730833");
+		var grande = document.getElementById('grande');
+		grande.setAttribute("fill","#cb4e81");
 	}
-	
+
 	
 </script>
 </head>
@@ -28,7 +30,7 @@
 	 width="595.28px" height="841.89px" viewBox="0 0 595.28 841.89" enable-background="new 0 0 595.28 841.89" xml:space="preserve">
 <polygon onclick="alert('You make me feel like a star !')" id="fond" fill="#E36095" stroke="#FFFFFF" points="204.204,259.921 160.122,228.782 109.479,247.443 125.472,195.896 92.074,153.498 
 	146.041,152.779 176.043,107.915 193.404,159.018 245.343,173.688 202.106,205.991 "/>
-<polygon onclick="changeCouleur()" fill="#cb4e81" stroke="#FFFFFF" points="242.698,158.749 225.784,145.913 205.622,152.569 212.603,132.517 
+<polygon onclick="changeCouleur()" id="grande" fill="#E36095" stroke="#FFFFFF" points="242.698,158.749 225.784,145.913 205.622,152.569 212.603,132.517 
 	200.042,115.397 221.27,115.84 233.669,98.604 239.808,118.93 260.033,125.396 242.598,137.516 "/>
 <polygon id="etoile" fill="#E36095" stroke="#FFFFFF" points="277.308,92.247 260.825,93.581 252.58,107.915 246.218,92.651 230.037,89.239 
 	242.588,78.472 240.833,62.029 254.952,70.638 270.048,63.888 266.223,79.976 "/>
