--- a/Lopes/llopes.html
+++ b/Lopes/llopes.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" type="text/css" href="../mystyle.css" />
 <script>
 
-	var colorPev
+	var colorPrev;
 	var colorChange="red";
 	function changeCouleur(){
 		var fond=document.getElementById('fond');
-		colorPrev = fond.setAttribute("fill");
+		colorPrev = fond.getAttribute("fill");
 		fond.setAttribute("fill",colorChange);
 		colorChange=colorPrev;
 	}
