--- a/hmlamali.html
+++ b/hmlamali.html
@@ -3,6 +3,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Mon premier code</title>
 		<link rel="stylesheet" type="text/css" href="mystyle.css" />
+		<script type="text/javascript" src=""/>
+		<script type="text/javascript" src=""/>
 		<script type="text/javascript">
 			var colorPrev;
 			var colorChange='#A9F5BC';
@@ -33,5 +35,7 @@
 	c2.878,1.661-16.928,4.471-24.941,0.126c-13.822-7.497,3.955-56.977,0.948-67.855C43.362,31.699,31.596,37.136,31.596,37.136z"/>
 </svg> 
 		<h2>2eme exercice</h2>
+		<h3>Ajouter du SVG en dynamique</h3>
+
 	</body>
 </html>
