ajout library js

--- a/sszoniecky.html
+++ b/sszoniecky.html
@@ -5,6 +5,8 @@
 <title>Mon premier code super chouette</title>
 
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
+<script type="text/javascript" src="js/queue.js" ></script>
+<script type="text/javascript" src="js/d3.js" ></script>
 <script>
 	var colorPrec;
 	var colorChange="red";
@@ -32,5 +34,7 @@
 	572.74,197.083 648.991,162.662 629.932,244.122 "/>
 </svg>
 <h2>2eme exercice</h2>
+<h3>ajouter du SVG en dynamique</h3>
+<div></div>
 </body>
 </html>
