--- a/schapotat.html
+++ b/schapotat.html
@@ -5,17 +5,16 @@
 <title>Mon premier code</title>
 
 <link rel="stylesheet" type="text/css" href="mystyle.css" />
-</head>
-<script>
+
+  <script>
    function changeCouleur()
    {
      var fond = document.getElermentByid("fond");
-	 colorPrec = fond.getAttrivute('fill'
+	 colorPrec = fond.getAttrivute('fill")
 	 fond.setAttribute("edition","first");
    }
-	 
-
-</script>
+  </script>
+ </head>
 
 <body>
 <h1>Mon super courssoso</h1>
